refactor: JDK 11에서 실행되도록 수정